# test-usuarios-api

./: README.md  database.dbdiagram  database.dbml  pyproject.toml  reproduce_validation.py
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  empresa.py  entity_config.py  usuario.py
app/core/: db.py  settings.py  validation_registry.py
app/db/repositories/: empresa.py  entity_config.py  usuario.py
app/models/: __init__.py  empresa.py  entity_config.py  usuario.py
app/schemas/: empresa.py  entity_config.py  usuario.py
app/services/: empresa.py  entity_config.py  usuario.py
app/utils/: dynamic_validator.py  security.py
frontend/: components.json  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ConfigsPage.tsx  CreateUserDialog.tsx  LoginPage.tsx  UsersPage.tsx
migrations/: env.py
migrations/versions/: 01447aefd7ff_add_fields_to_usuario_model.py  960654855031_initial_migration_fixed_types.py  ae38db0dd228_update_empresa.py  beec60a5c3fe_update_empresa_fields_nombre_and_nit.py  d9094f1639e8_update_config.py  eb0eea0be28f_add_entity_config_table_and_remove_.py
