[project]
name = "test-usuarios-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "fastapi",
    "alembic",
    "sqlalchemy",
    "psycopg[binary]",
    "asyncpg",
    "pydantic-settings",
    "email-validator",
    "bcrypt",
    "uvicorn>=0.40.0",
    "watchfiles>=1.1.1",
]
